--- a/Yukari/src/main/res/values/strings.xml
+++ b/Yukari/src/main/res/values/strings.xml
@@ -3,11 +3,14 @@
 
     <string name="app_name">Yukari</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
     <string name="twitter_consumer_key">rH3YrUr7YlLBPrx2Mk5mng</string>
     <string name="twitter_consumer_secret">6vG5nUHEO4EyMlGFXZ7G2GJx1yUsRxFTHQTTMvRI</string>
     <string name="OAuthTitle">OAuth認証</string>
 
     <integer name="requestcode_oauth">1</integer>
+
+    <string name="title_activity_tweet">ツイート</string>
+    <string name="activity_animation_duration">300</string>
+    <string name="title_activity_status">Status</string>
 
 </resources>
