--- a/Yukari/src/main/res/values/strings.xml
+++ b/Yukari/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
 
     <string name="title_activity_tweet">ツイート</string>
     <string name="activity_animation_duration">300</string>
-    <string name="title_activity_status">Status</string>
-    <string name="title_activity_assetextract">起動準備中...</string>
+    <string name="title_activity_status">ツイート詳細</string>
+    <string name="title_activity_assetextract">起動準備中…</string>
 
 </resources>
