--- a/Yukari/src/main/res/values/strings.xml
+++ b/Yukari/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="title_activity_status">ツイート詳細</string>
     <string name="title_activity_assetextract">起動準備中…</string>
     <string name="title_activity_profile">Profile</string>
+    <string name="title_morse_input">モールス入力</string>
 
 </resources>
