--- a/YukariProject/Yukari/src/main/res/values/strings.xml
+++ b/YukariProject/Yukari/src/main/res/values/strings.xml
@@ -2,18 +2,19 @@
 <resources>
 
     <string name="app_name">Yukari</string>
-    <string name="action_settings">Settings</string>
+
     <string name="twitter_consumer_key">rH3YrUr7YlLBPrx2Mk5mng</string>
     <string name="twitter_consumer_secret">6vG5nUHEO4EyMlGFXZ7G2GJx1yUsRxFTHQTTMvRI</string>
+
     <string name="OAuthTitle">OAuth認証</string>
 
-    <integer name="requestcode_oauth">1</integer>
+    <string name="activity_animation_duration">300</string>
 
     <string name="title_activity_tweet">ツイート</string>
-    <string name="activity_animation_duration">300</string>
     <string name="title_activity_status">ツイート詳細</string>
     <string name="title_activity_assetextract">起動準備中…</string>
     <string name="title_activity_profile">Profile</string>
     <string name="title_morse_input">モールス入力</string>
+    <string name="title_activity_snpicker">ScreenName Picker</string>
 
 </resources>
