--- a/YukariProject/Yukari/src/main/res/values/strings.xml
+++ b/YukariProject/Yukari/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="title_morse_input">モールス入力</string>
     <string name="title_activity_snpicker">ScreenName Picker</string>
 
+    <string name="key_viewholder">viewholder</string>
 </resources>
