--- a/Yukari/src/main/res/values/strings.xml
+++ b/Yukari/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="title_morse_input">モールス入力</string>
     <string name="title_activity_snpicker">ScreenName Picker</string>
     <string name="title_activity_accountchooser">アカウントを選択</string>
+    <string name="title_activity_accountmanage">アカウント管理</string>
 
     <string name="key_viewholder">viewholder</string>
 </resources>
