--- a/YukariProject/Yukari/src/main/res/values/strings.xml
+++ b/YukariProject/Yukari/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="title_activity_accountchooser">アカウントを選択</string>
     <string name="title_activity_accountmanage">アカウント管理</string>
     <string name="title_activity_config">設定</string>
+    <string name="title_activity_about">About</string>
 
     <string name="key_viewholder">viewholder</string>
 </resources>
