--- a/YukariProject/Yukari/src/main/res/values/strings.xml
+++ b/YukariProject/Yukari/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="title_activity_about">About</string>
 
     <string name="key_viewholder">viewholder</string>
+    <string name="title_activity_profile_edit">プロフィール編集</string>
 </resources>
