--- a/YukariProject/Yukari/src/main/res/values/strings.xml
+++ b/YukariProject/Yukari/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="title_activity_open_aclog">このツイートのaclogを開く</string>
     <string name="title_activity_mute">ミュート設定</string>
     <string name="title_activity_user_search">ユーザー検索</string>
+    <string name="title_activity_font_selector">フォント設定</string>
 </resources>
