--- a/YukariProject/Yukari/src/main/res/values/strings.xml
+++ b/YukariProject/Yukari/src/main/res/values/strings.xml
@@ -6,10 +6,9 @@
     <string name="twitter_consumer_key">rH3YrUr7YlLBPrx2Mk5mng</string>
     <string name="twitter_consumer_secret">6vG5nUHEO4EyMlGFXZ7G2GJx1yUsRxFTHQTTMvRI</string>
 
-    <string name="OAuthTitle">OAuth認証</string>
-
     <string name="activity_animation_duration">300</string>
 
+    <string name="title_activity_oauth">OAuth認証</string>
     <string name="title_activity_tweet">ツイート</string>
     <string name="title_activity_status">ツイート詳細</string>
     <string name="title_activity_assetextract">起動準備中…</string>
@@ -36,4 +35,10 @@
     <string name="drive_failed_export">Export failed.</string>
     <string name="drive_complete_import">Import Complete!</string>
     <string name="drive_complete_export">Export Complete!</string>
+
+    <string name="mute_query">キーワード</string>
+    <string name="mute_target">検索の対象</string>
+    <string name="mute_match">一致条件</string>
+    <string name="mute_erase">ミュートの対象</string>
+    <string name="mute_expiration">有効期限</string>
 </resources>
