--- a/Yukari/src/main/res/values/strings.xml
+++ b/Yukari/src/main/res/values/strings.xml
@@ -46,4 +46,7 @@
 
     <string name="list_members_count">%1$d 人のメンバー</string>
     <string name="list_subscribers_count">, %1$d 人がリストを保存</string>
+
+    <string name="error_storage_not_found">[Yukari 起動エラー] ストレージエラー\nアプリの動作にはストレージが必須です\nSDカードが挿入されているか確認してください</string>
+    <string name="error_broken_font">[Yukari データチェック]\nフォントファイルが壊れています\n再展開を行います</string>
 </resources>
