--- a/Yukari/src/main/res/values/strings.xml
+++ b/Yukari/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
 
     <string name="activity_animation_duration">300</string>
 
-    <string name="title_activity_oauth">OAuth認証</string>
+    <string name="title_activity_oauth">アカウントを追加</string>
     <string name="title_activity_tweet">ツイート</string>
     <string name="title_activity_status">ツイート詳細</string>
     <string name="title_activity_assetextract">起動準備中…</string>
