--- a/Yukari/src/main/res/values/strings.xml
+++ b/Yukari/src/main/res/values/strings.xml
@@ -67,7 +67,7 @@
     <string name="notification_channel_id_core_service">CoreService</string>
     <string name="notification_channel_id_async_action">AsyncAction</string>
 
-    <string name="mastodon_status_visibility_prefer_server_preference">Webアプリのデフォルト設定を使用</string>
+    <string name="mastodon_status_visibility_prefer_server_preference">Webアプリの設定を使用</string>
     <string name="mastodon_status_visibility_public">公開</string>
     <string name="mastodon_status_visibility_unlisted">未収載</string>
     <string name="mastodon_status_visibility_private">フォロワー限定</string>
