--- a/Yukari/src/main/res/values/strings.xml
+++ b/Yukari/src/main/res/values/strings.xml
@@ -15,8 +15,8 @@
     <string name="button_send">送信</string>
 
     <string name="title_activity_oauth">アカウントを追加</string>
-    <string name="title_activity_tweet">ツイート</string>
-    <string name="title_activity_status">ツイート詳細</string>
+    <string name="title_activity_tweet">投稿</string>
+    <string name="title_activity_status">投稿詳細</string>
     <string name="title_activity_assetextract">起動準備中…</string>
     <string name="title_activity_profile">Profile</string>
     <string name="title_morse_input">モールス入力</string>
